Add OFAC screening pipeline (Java, no LLM) with 56 tests
Replace Python request_script.py (API + LLM) with pure Java solution:
- Screening CLI (Main.java) with manual arg parsing
- BlacklistApiClient via HttpURLConnection (no extra deps)
- MatchClassifier ported from Python normalize_name/classify_match
- ExcelNameReader/ScreeningResultWriter using Apache POI
- ScreeningEngine orchestrator, per-name sheet output
- 56 new JUnit tests (MatchClassifier, writer, reader, API client, etc.)
- Java 8 compat fixes (Files.readString → readAllBytes)
- Remove === filename === prefix from parser JSON output

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>